<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/saveMars"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/mars_icon"
        android:title="@string/toolbarHelpKitten"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/showSaved"
        android:icon="@drawable/mars_icon"
        android:title="@string/showSaveMars"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/kitten"
        android:icon="@drawable/kitten_toolbar"
        android:title="cat"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/weather"
        android:icon="@drawable/weather_toolbar"
        android:title="weather"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/newYork"
        android:title="NY"
        android:visible="true"
        app:showAsAction="always" />
</menu>